--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^16.8.1",
-    "react-native": ">=0.59.0-rc.0 <1.0.x"
+    "react": "^18.2.0",
+    "react-native": ">=0.71.3"
   },
   "devDependencies": {
-    "react": "^16.8.3",
-    "react-native": "^0.62.3"
+    "react": "^18.2.0",
+    "react-native": "^0.71.3"
   },
   "dependencies": {
-    "mem": "^4.0.0"
+    "mem": "^9.0.2"
   }
 }
